# json-rpc-cxx

./: .codecov.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml
.circleci/: config.yml
.github/workflows/: codeql.yml
examples/: cpphttplibconnector.hpp  inmemoryconnector.hpp  specification.json
examples/warehouse/: main.cpp  types.h  warehouseapp.cpp  warehouseapp.hpp
include/jsonrpccxx/: batchclient.hpp  client.hpp  common.hpp  dispatcher.hpp  iclientjsonconnector.hpp  server.hpp  typemapper.hpp
jsonrpccxx/: client.hpp  server.hpp
src/: batchclient.hpp  client.hpp  common.hpp  dispatcher.hpp  dispatcher.test.cpp  server.hpp  server.test.cpp  specification.json  typemapper.hpp  typemapper.test.cpp
test/: batchclient.cpp  client.cpp  common.cpp  dispatcher.cpp  integrationtest.hpp  server.cpp  testclientconnector.hpp  testserverconnector.hpp  typemapper.cpp  warehouseapp.cpp
